@@ -1,5 +1,5 @@
 VERSION="0.13"
-REVISION="-SVN"
+REVISION="-rc1"
 
 # NODEBUG=1             - no debug target
 # TRANSDIR_MERKAARTOR - translations directory for merkaartor
@@ -8,10 +8,11 @@ REVISION="-SVN"
 # OUTPUT_DIR          - base directory for local output files
 # PREFIX              - base prefix for installation
 # NOUSEWEBKIT=1         - disable use of WebKit (Yahoo adapter)
-# OSMARENDER=1        - enable osmarender (requires libxml2 / libxslt)
+OSMARENDER=1        - enable osmarender (requires libxml2 / libxslt)
 # MOBILE=1    	      - enable MOBILE
 # GEOIMAGE=1          - enable geotagged images (requires exiv2)
 # GPSD=1              - use gpsd as location provider
 # NVIDIA_HACK=1       - used to solve nvidia specific slowdown
 # PROJ=1    	      - use PROJ4 library for projections (requires proj4)
 # GDAL=1    	      - enable GDAL (for, e.g., shapefile import)
+# FORCE_CUSTOM_STYLE=1 - force custom style (recommended on Linux until the "expanding dock" is solved upstream)
